--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,16 @@ on:
       - main
 jobs:
   coverage:
-    runs-on: ubuntu-latest
     permissions:
-      actions: write
+      checks: write
+      pull-requests: write
+      contents: write
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: jwalton/gh-find-current-pr@v1
+          id: findPr
       - uses: ArtiomTr/jest-coverage-report-action@v2
+          with:
+             prnumber: ${{ steps.findPr.outputs.number }}
+             output: comment
