--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,16 @@ on:
 jobs:
   coverage:
     permissions:
+      actions: write
       checks: write
-      pull-requests: write
       contents: write
+      deployments: write
+      issues: write
+      packages: write
+      pull-requests: write
+      repository-projects: write
+      security-events: write
+      statuses: write
     runs-on: ubuntu-latest
 
     steps:
