--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: yarn install
+
       - uses: ArtiomTr/jest-coverage-report-action@v2
+        id: coverage
         with:
           working-directory: src
           package-manager: yarn
